--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
-    "dompurify": "^3.2.6"
+    "dompurify": "^3.2.6",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^3.3.5"
   },
   "jest": {
     "transformIgnorePatterns": [
